--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   </style>
 </head>
 <body>
-  <h1>Hello.</h1>
+  <h1>Hi,</h1>
   <p style="font-weight:500; font-size:2.2em">
-    My name is Evan You.
+    My name is Thatryphax Chang.
   </p>
   <p>
     I am an independent software developer and the creator of the open source JavaScript framework
