--- a/index.html
+++ b/index.html
@@ -1,79 +1,42 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Evan You</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: calc(10px + 0.33vw);
-      -webkit-font-smoothing: antialiased;
-      padding: 5vh 10vw;
-      color: #121314;
-    }
-    h1 {
-      font-size: 4.5em;
-      font-weight: 500;
-      margin-bottom: 0;
-    }
-    p {
-      font-size: 1.6em;
-      font-weight: 300;
-      line-height: 1.4;
-      max-width: 26em;
-    }
-    a {
-      text-decoration: none;
-      color: #121314;
-      position: relative;
-    }
-    a:after {
-      content: "";
-      position: absolute;
-      z-index: -1;
-      top: 60%;
-      left: -0.1em;
-      right: -0.1em;
-      bottom: 0;
-      transition: top 200ms cubic-bezier(0, .8, .13, 1);
-      background-color: rgba(79,192,141,0.5);
-    }
-    a:hover:after {
-      top: 0%;
-    }
-  </style>
-</head>
-<body>
-  <h1>Hi,</h1>
-  <p style="font-weight:500; font-size:2.2em">
-    My name is Thatryphax Chang.
-  </p>
-  <p>
-    I am an independent software developer and the creator of the open source JavaScript framework
-    <a href="https://vuejs.org" target="_blank">Vue.js</a>.
-    Most of my work is open source and publicly available on
-    <a href="https://github.com/yyx990803" target="_blank">GitHub</a>.
-  </p>
-  <p>
-    I have an <a href="https://blog.evanyou.me" target="_blank">old blog</a>
-    which I no longer actively update - you probably want to follow me on
-    <a href="https://twitter.com/youyuxi" target="_blank">Twitter</a> and
-    <a href="https://medium.com/@youyuxi" target="_blank">Medium</a>
-    for more up-to-date content.
-  </p>
-  <p>
-    If you happen to speak Chinese, my Chinese name is 尤雨溪. you can also find me on
-    <a href="https://www.weibo.com/arttechdesign" target="_blank">微博</a> and
-    <a href="https://www.zhihu.com/people/evanyou/activities" target="_blank">知乎</a>.
-  </p>
-  <p>
-    Outside of programming and helping my wife take care of our two kids,
-    I enjoy video games, karaoke, sushi and collecting watches.
-  </p>
-</body>
-</html>
+<html lang="zh-CN">
 
+    <head>
+        <meta charset="utf-8">
+        <title>砂酱的小窝</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
+        <link href="./main.css" rel="stylesheet">
+    </head>
+
+    <body>
+        <h1>
+            大家好
+        </h1>
+        <h2>
+            欢迎来到我的个人主页
+        </h2>
+        <p>
+            大家可以从以下方式找到我
+        </p>
+<!-- https://twitter.com/intent/tweet?text=ちょん*🕊 #pixiv&url=https://www.pixiv.net/users/15158551
+ -->        <p>
+            QQ：3033402535
+            <br>
+            微信：thatryphax
+            <br>
+            Gmail：
+            <a href="mailto:thatryphax@gmail.com" target="_blank">thatryphax@gmail.com</a>
+            <br>
+            Github：
+            <a href="//github.com/thatryphax" target="_blank">Thatryphax</a>
+            <br>
+            哔哩哔哩：
+            <a href="//space.bilibili.com/33382859" target="_blank">神奇的砂酱</a>
+            <br>
+            酷安：
+            <a href="//www.coolapk.com/u/564201" target="_blank">翔宝宝__</a>
+        </p>
+        
+    </body>
+</html>
