add about page; change css; change index page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
             大家好
         </h1>
         <h2>
+            我是砂酱(Thatryphax Chang)
+            <br>
             欢迎来到我的个人主页
         </h2>
         <p>
             大家可以从以下方式找到我
         </p>
-<!-- https://twitter.com/intent/tweet?text=ちょん*🕊 #pixiv&url=https://www.pixiv.net/users/15158551
- -->        <p>
+<!-- https://twitter.com/intent/tweet?text=ちょん*🕊 #pixiv&url=https://www.pixiv.net/users/15158551-->        
+        <p>
             QQ：3033402535
             <br>
             微信：thatryphax
@@ -37,6 +39,12 @@
             酷安：
             <a href="//www.coolapk.com/u/564201" target="_blank">翔宝宝__</a>
         </p>
-        
+
+        <hr>
+        <p>
+            <a href="./index.html">首页</a>
+            <a href="./about.html">关于</a>
+        </p>
+
     </body>
 </html>
