--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <body>
         <h1>
-            大家好
+            大家好，
         </h1>
         <h2>
-            我是砂酱(Thatryphax Chang)
+            我是砂酱（Thatryphax Chang）
             <br>
             欢迎来到我的个人主页
         </h2>
@@ -41,7 +41,7 @@
         </p>
 
         <hr>
-        <p>
+        <p align="right">
             <a href="./index.html">首页</a>
             <a href="./about.html">关于</a>
         </p>
