--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </p>
 
         <hr>
-        <p>
+        <p align="right">
             <a href="./index.html">首页</a>
             <a href="./about.html">关于</a>
         </p>
