--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </h1>
         <h2>
             我是砂酱（Thatryphax Chang）
+            是高中生
             <br>
             欢迎来到我的个人主页
         </h2>
