--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>关于   ---   砂酱的小窝</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap" rel="stylesheet">
         <link href="./main.css" rel="stylesheet">
     </head>
 
