--- a/about.html
+++ b/about.html
@@ -17,9 +17,7 @@
 
         <p>
             本站于二零二零年六月二十五日正式建立，模板是套用的
-            <a href="//evanyou.me">
-                Evan you
-            </a>
+            <a href="//evanyou.me">Evan you</a>
             的个人主页，请见谅😊
         </p>
 
