Edit all content

--- a/index.html
+++ b/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>砂酱的小窝</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <div class="profile">
+          <div class="meta"><img class="avatar" src="favicon.ico">
+            <h1 style="font-family:Pacifico">ThaJam</h1>
+            <div class="position">Developer</div>
+          </div>
+        </div>
+        <div class="portfolio">
+          <p>Hi，很高兴见到你，欢迎来到砂酱的小窝。<br/><br/><br/><br/></p>
+          <div class="social">
+            <a class="tooltip" title="Blog" href="//blog.thajam.top">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 512 512"><defs/><g><path fill="currentColor" d="M368 96a16 16 0 01-16-16V0H88a24 24 0 00-24 24v168h83a32 32 0 0122 9l14 14a32 32 0 0022 9h102a32 32 0 0022-9l14-14a32 32 0 0122-9h83V96z" opacity=".4"></path><path fill="currentColor" d="M368 96h80v-5a18 18 0 00-5-12L369 5a18 18 0 00-12-5h-5v80a16 16 0 0016 16zm112 96H365a32 32 0 00-22 9l-14 14a32 32 0 01-22 9H205a32 32 0 01-22-9l-14-14a32 32 0 00-22-9H32a32 32 0 00-32 32v32a32 32 0 0032 32v160a64 64 0 0064 64h320a64 64 0 0064-64V288a32 32 0 0032-32v-32a32 32 0 00-32-32zM336 296a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-40 24H88a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm32 64h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm232 56a8 8 0 01-8 8H152a8 8 0 01-8-8v-16a8 8 0 018-8h208a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8z"></path></g></svg></i>
+            </a>
+            <a class="tooltip" title="GitHub" href="//github.com/thajam" target="_blank" rel="external noopenner noreferrer nofollow">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 496 512"><defs/><path fill="currentColor" d="M166 397c0 2-2 4-5 4-4 0-6-1-6-4 0-2 2-3 5-3 3-1 6 1 6 3zm-31-4c-1 2 1 4 4 5s6 0 6-2-1-5-4-5c-3-1-5 0-6 2zm44-2c-3 1-5 3-5 5 1 2 3 3 6 3 3-1 5-3 5-5s-3-3-6-3zM245 8A240 240 0 000 252a251 251 0 00170 239c12 2 17-5 17-12v-61s-70 15-85-30c0 0-12-29-28-37 0 0-23-15 2-15 0 0 24 2 38 26 22 38 59 27 73 21 2-16 9-28 16-34-56-6-112-14-112-111 0-27 7-41 23-59a95 95 0 013-67c21-7 69 27 69 27a235 235 0 01126 0s48-34 69-27a94 94 0 012 67c16 18 26 32 26 59 0 97-59 105-115 111 9 8 17 23 17 46v84c0 6 5 14 17 12a248 248 0 00168-239C496 113 384 8 245 8zM97 353c-1 1-1 3 1 5 1 2 4 2 5 1s1-3-1-5c-1-2-4-2-5-1zm-11-8l3 4c1 1 3 0 4-1s0-3-2-4-4 0-5 1zm33 35c-2 2-1 5 1 7s5 2 7 1c1-2 0-5-2-7s-5-2-6-1zm-12-14v6c2 2 5 3 6 2 2-1 2-4 0-6-1-3-4-4-6-2z" /></svg></i>
+            </a>
+            <a class="tooltip" title="Email" href="mailto:thatryphax@gmail.com" target="_blank" rel="external noopenner noreferrer nofollow">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 512 512"><defs/><path fill="currentColor" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg></i>
+            </a>
+            <a class="tooltip" title="QQ" href="//wpa.qq.com/msgrd?v=3&uin=3033402535&site=qq&menu=yes" target="_blank" rel="external noopenner noreferrer nofollow">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 1024 1024"><defs/><path fill="currentColor" d="M909.824 664.576C891.392 553.984 814.08 481.28 814.08 481.28c11.264-100.864-29.696-118.784-29.696-118.784-8.192-311.296-266.752-305.664-272.384-305.664-5.632 0-264.192-5.632-272.384 305.664 0 0-40.448 17.92-29.696 118.784 0 0-77.312 72.704-95.744 183.296 0 0-9.728 187.392 88.576 23.04 0 0 22.016 62.464 62.464 118.784 0 0-72.704 25.6-66.56 91.648 0 0-2.56 73.728 154.624 68.608 0 0 110.592-8.704 143.872-57.344h29.184c33.28 48.64 143.872 57.344 143.872 57.344 157.184 5.12 154.624-68.608 154.624-68.608 6.144-66.048-66.56-91.648-66.56-91.648 40.448-56.32 62.464-118.784 62.464-118.784 98.816 164.352 89.088-23.04 89.088-23.04z"></path></svg></i>
+            </a>
+            <a class="tooltip" title="Bilibili" href="//space.bilibili.com/33382859" target="_blank" rel="external noopenner noreferrer nofollow">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 1024 1024"><defs/><path fill="currentColor" d="M777.514667 131.669333a53.333333 53.333333 0 0 1 0 75.434667L728.746667 255.829333h49.92A160 160 0 0 1 938.666667 415.872v320a160 160 0 0 1-160 160H245.333333A160 160 0 0 1 85.333333 735.872v-320a160 160 0 0 1 160-160h49.749334L246.4 207.146667a53.333333 53.333333 0 1 1 75.392-75.434667l113.152 113.152c3.370667 3.370667 6.186667 7.04 8.448 10.965333h137.088c2.261333-3.925333 5.12-7.68 8.490667-11.008l113.109333-113.152a53.333333 53.333333 0 0 1 75.434667 0z m1.152 231.253334H245.333333a53.333333 53.333333 0 0 0-53.205333 49.365333l-0.128 4.010667v320c0 28.117333 21.76 51.157333 49.365333 53.162666l3.968 0.170667h533.333334a53.333333 53.333333 0 0 0 53.205333-49.365333l0.128-3.968v-320c0-29.44-23.893333-53.333333-53.333333-53.333334z m-426.666667 106.666666c29.44 0 53.333333 23.893333 53.333333 53.333334v53.333333a53.333333 53.333333 0 1 1-106.666666 0v-53.333333c0-29.44 23.893333-53.333333 53.333333-53.333334z m320 0c29.44 0 53.333333 23.893333 53.333333 53.333334v53.333333a53.333333 53.333333 0 1 1-106.666666 0v-53.333333c0-29.44 23.893333-53.333333 53.333333-53.333334z" /></svg></i>
+            </a>
+            <a class="tooltip" title="Coolapk" href="//www.coolapk.com/u/564201" target="_blank" rel="external noopenner noreferrer nofollow">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 1024 1024"><defs/><path fill="currentColor" d="M445.493333 46.72c95.733333-13.653333 195.626667 2.613333 281.493334 47.253333 92.373333 47.36 168.16 126.24 211.626666 220.48 46.986667 100.426667 56.16 217.706667 26.24 324.426667-26.24 94.293333-82.826667 180-159.573333 240.8-72.586667 58.133333-162.826667 94.24-255.68 101.013333-116.586667 10.293333-236.32-26.186667-328.053333-98.773333-66.08-51.52-117.546667-121.44-147.893334-199.466667-44.106667-112.48-42.186667-242.133333 5.226667-353.226666 61.866667-149.6 206.026667-261.226667 366.613333-282.506667M270.4 350.08c-61.76 30.453333-102.986667 98.4-99.413333 167.413333 0.693333 66.666667 42.72 130.24 102.933333 158.293334 39.253333 19.04 84.853333 21.173333 127.093333 12.64 49.12-10.293333 90.453333-41.973333 124.8-77.173334 53.6-54.72 86.453333-124.96 129.6-187.36 22.666667 41.173333 45.333333 82.346667 67.786667 123.573334-24.586667-15.786667-46.773333-35.04-72.16-49.653334-16.746667 11.946667-33.28 24.213333-50.186667 35.946667 62.08 49.013333 126.666667 94.826667 190.026667 142.186667 12.96 8.746667 27.84 23.253333 44.64 14.666666 17.6-7.146667 22.613333-30.346667 12.106667-45.44-52.373333-99.466667-108.48-196.906667-163.253334-295.093333-5.653333-13.066667-19.626667-22.773333-34.24-18.56-13.493333 2.133333-20.266667 15.52-27.146666 25.76-32.106667 52.8-61.813333 107.146667-97.44 157.76-33.866667 48.213333-77.12 96.373333-136.586667 110.88-58.026667 15.2-126.026667-14.506667-148.213333-71.68-17.813333-46.133333-2.933333-102.613333 36.533333-132.8 35.946667-29.013333 86.72-31.093333 129.386667-17.653333 42.666667 13.76 76.533333 44.48 110.773333 72.053333 17.493333-12.053333 36-23.146667 50.986667-38.4-44.96-39.84-93.013333-79.306667-151.146667-97.76-48.16-12.64-101.813333-13.12-146.88 10.4z" /></svg></i>
+            </a>
+            <a class="tooltip" title="微信" href="weixin://contacts/profile/thatryphax" target="_blank" rel="external noopenner noreferrer nofollow">
+              <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 1024 1024"><defs/><path fill="currentColor" d="M405.333333 170.666667C228.693333 170.666667 85.333333 285.44 85.333333 426.666667 85.333333 507.306667 131.413333 578.56 203.946667 625.493333L170.666667 725.333333 277.333333 661.333333C315.306667 674.56 357.12 682.666667 401.493333 682.666667 390.4 655.786667 384 627.2 384 597.333333 384 456.106667 517.546667 341.333333 682.666667 341.333333 690.773333 341.333333 698.88 341.333333 706.56 342.613333 663.04 242.773333 545.28 170.666667 405.333333 170.666667M277.333333 277.333333C300.8 277.333333 320 296.533333 320 320 320 343.466667 300.8 362.666667 277.333333 362.666667 253.866667 362.666667 234.666667 343.466667 234.666667 320 234.666667 296.533333 253.866667 277.333333 277.333333 277.333333M490.666667 277.333333C514.133333 277.333333 533.333333 296.533333 533.333333 320 533.333333 343.466667 514.133333 362.666667 490.666667 362.666667 467.2 362.666667 448 343.466667 448 320 448 296.533333 467.2 277.333333 490.666667 277.333333M682.666667 384C541.44 384 426.666667 479.573333 426.666667 597.333333 426.666667 715.093333 541.44 810.666667 682.666667 810.666667 711.253333 810.666667 738.56 807.253333 764.16 800L853.333333 853.333333 826.88 773.546667C893.866667 734.72 938.666667 670.293333 938.666667 597.333333 938.666667 479.573333 823.893333 384 682.666667 384M597.333333 490.666667C620.8 490.666667 640 509.866667 640 533.333333 640 556.8 620.8 576 597.333333 576 573.866667 576 554.666667 556.8 554.666667 533.333333 554.666667 509.866667 573.866667 490.666667 597.333333 490.666667M768 490.666667C791.466667 490.666667 810.666667 509.866667 810.666667 533.333333 810.666667 556.8 791.466667 576 768 576 744.533333 576 725.333333 556.8 725.333333 533.333333 725.333333 509.866667 744.533333 490.666667 768 490.666667Z"></path></svg></i>
+            </a>
 
-    <head>
-        <meta charset="utf-8">
-        <title>砂酱的小窝</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap" rel="stylesheet">
-        <link href="./main.css" rel="stylesheet">
-    </head>
+            <!-- example:
+              <a class="tooltip" title="标题" href="地址" target="_blank" rel="external noopenner noreferrer nofollow">
+                <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="值"><defs/><path fill="currentColor" d="图标"></path></svg></i>
+              </a>
+            -->
 
-    <body>
-        <h1>
-            大家好，
-        </h1>
-        <h2>
-            我是砂酱（Thatryphax Chang）
-            <br>
-            欢迎来到我的个人主页
-        </h2>
-        <p>
-            大家可以从以下方式找到我
-        </p>
-        
-        <p>
-            QQ：3033402535
-            <br>
-            微信：thatryphax
-            <br>
-            Gmail：
-            <a href="mailto:thatryphax@gmail.com" target="_blank">thatryphax@gmail.com</a>
-            <br>
-            Github：
-            <a href="//github.com/thatryphax" target="_blank">Thatryphax</a>
-            <br>
-            哔哩哔哩：
-            <a href="//space.bilibili.com/33382859" target="_blank">神奇的砂酱</a>
-            <br>
-            酷安：
-            <a href="//www.coolapk.com/u/564201" target="_blank">翔宝宝__</a>
-        </p>
-
-        <hr>
-        <p align="right">
-            <a href="./index.html">首页</a>
-            <a href="./about.html">关于</a>
-        </p>
-
-    </body>
+          </div>
+        </div>
+      </div>
+      <div class="footer text-center">Based on <a href="//skk.moe" class="label">Sukka's</a></div>
+    </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.getElementsByClassName("container")[0].classList.add("fadeIn"),
+        document.getElementsByClassName("footer")[0].classList.add("fadeIn") })
+    </script>
+  </body>
 </html>
