--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           </div>
         </div>
         <div class="portfolio">
-          <p>Hi，很高兴见到你，欢迎来到砂酱的小窝。<br/><br/><br/><br/></p>
+          <p>Hi，我是神奇的砂酱。很高兴见到你，欢迎来到砂酱的小窝。</p>
           <div class="social">
-            <a class="tooltip" title="Blog" href="//blog.thajam.top">
+            <!-- <a class="tooltip" title="Blog" href="//blog.thajam.top">
               <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 512 512"><defs/><g><path fill="currentColor" d="M368 96a16 16 0 01-16-16V0H88a24 24 0 00-24 24v168h83a32 32 0 0122 9l14 14a32 32 0 0022 9h102a32 32 0 0022-9l14-14a32 32 0 0122-9h83V96z" opacity=".4"></path><path fill="currentColor" d="M368 96h80v-5a18 18 0 00-5-12L369 5a18 18 0 00-12-5h-5v80a16 16 0 0016 16zm112 96H365a32 32 0 00-22 9l-14 14a32 32 0 01-22 9H205a32 32 0 01-22-9l-14-14a32 32 0 00-22-9H32a32 32 0 00-32 32v32a32 32 0 0032 32v160a64 64 0 0064 64h320a64 64 0 0064-64V288a32 32 0 0032-32v-32a32 32 0 00-32-32zM336 296a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-40 24H88a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm32 64h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm232 56a8 8 0 01-8 8H152a8 8 0 01-8-8v-16a8 8 0 018-8h208a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8z"></path></g></svg></i>
-            </a>
+            </a> -->
             <a class="tooltip" title="GitHub" href="//github.com/thajam" target="_blank" rel="external noopenner noreferrer nofollow">
               <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 496 512"><defs/><path fill="currentColor" d="M166 397c0 2-2 4-5 4-4 0-6-1-6-4 0-2 2-3 5-3 3-1 6 1 6 3zm-31-4c-1 2 1 4 4 5s6 0 6-2-1-5-4-5c-3-1-5 0-6 2zm44-2c-3 1-5 3-5 5 1 2 3 3 6 3 3-1 5-3 5-5s-3-3-6-3zM245 8A240 240 0 000 252a251 251 0 00170 239c12 2 17-5 17-12v-61s-70 15-85-30c0 0-12-29-28-37 0 0-23-15 2-15 0 0 24 2 38 26 22 38 59 27 73 21 2-16 9-28 16-34-56-6-112-14-112-111 0-27 7-41 23-59a95 95 0 013-67c21-7 69 27 69 27a235 235 0 01126 0s48-34 69-27a94 94 0 012 67c16 18 26 32 26 59 0 97-59 105-115 111 9 8 17 23 17 46v84c0 6 5 14 17 12a248 248 0 00168-239C496 113 384 8 245 8zM97 353c-1 1-1 3 1 5 1 2 4 2 5 1s1-3-1-5c-1-2-4-2-5-1zm-11-8l3 4c1 1 3 0 4-1s0-3-2-4-4 0-5 1zm33 35c-2 2-1 5 1 7s5 2 7 1c1-2 0-5-2-7s-5-2-6-1zm-12-14v6c2 2 5 3 6 2 2-1 2-4 0-6-1-3-4-4-6-2z" /></svg></i>
             </a>
