--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="profile">
           <div class="meta">
-            <img class="avatar" src="avatar.webp">
+            <img class="avatar" alt="砂的头像" src="avatar.webp">
             <h1>ThaJam</h1>
             <div class="position">Developer</div>
           </div>
