--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="portfolio">
           <p>
             Hi, I'm ThaJam / Thatryphax ( Chang ).<br/>
-            Welcome to My HomePage!
+            Welcome to My HomePage!<br/>
+            <a class="tooltip" style="color:#7c8891" title="My Blog" href="//blog.thajam.cn" target="_blank">My Blog: blog.thajam.cn</a>
           </p>
           <div class="social">
             <p>Below are My Contact Information</p>
