--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="profile">
           <div class="meta">
             <img class="avatar" alt="砂的头像" src="avatar.webp">
-            <h1>Thalpha</h1>
+            <h1>Salfa_04</h1>
             <div class="position">High School Student</div>
           </div>
         </div>
         <div class="portfolio">
           <p>
-            Hi, I'm Thalpha Chang.<br/>
+            Hi, I'm Salfa Chang.<br/>
             zh-CN / en-US / INFP<br/>
             JavaScript Enthusiast<br/>
             Welcome to My HomePage!<br/>
@@ -27,7 +27,7 @@
           <div class="social">
             <p>Below are My Contact Information</p>
 
-            <a class="tooltip" title="Email: thalpha@foxmail.com" href="mailto:thalpha@foxmail.com" target="_blank"
+            <a class="tooltip" title="Email: salfa_04@petalmail.com" href="mailto:salfa_04@petalmail.com" target="_blank"
               rel="external noopenner noreferrer nofollow">
               <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 512 512">
                   <defs />
@@ -36,7 +36,7 @@
                   </path>
                 </svg></i>
             </a>
-            <a class="tooltip" title="GitHub: thajam" href="//github.com/thajam" target="_blank"
+            <a class="tooltip" title="GitHub: thajam" href="//github.com/Salfa_04" target="_blank"
               rel="external noopenner noreferrer nofollow">
               <i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 496 512">
                   <defs />
